--- a/public/css/ll.css
+++ b/public/css/ll.css
@@ -20,7 +20,7 @@
 #Loading{
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #fff
   url("../images/gif.gif")
    no-repeat center center;
