--- a/views/teacherProfile.ejs
+++ b/views/teacherProfile.ejs
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Profile</title>
+    <style>
+      *{
+        overflow: hidden;
+      }
+    </style>
 
   <!--Bootstrap-->
 
@@ -261,9 +266,7 @@
 
   <!--footer-->
 
-  <p class="copyright">
-    &copy; 2022 - <span>Hogwarts University</span> All Rights Reserved.
-  </p>
+
 </main>
 
   <script src="js/dashboard.js"></script>
@@ -278,7 +281,14 @@
     };
     </script>
 
+<script>
+  function preventZoom() {
+      document.body.style.zoom = '125%'; // Set the desired zoom level
+  }
 
+  window.addEventListener('resize', preventZoom);
+  window.addEventListener('load', preventZoom);
+</script>
 
   </body>
 </html>
