--- a/views/Error.ejs
+++ b/views/Error.ejs
@@ -110,6 +110,14 @@
   
       </div>
 
+      <script>
+        function preventZoom() {
+            document.body.style.zoom = '125%'; // Set the desired zoom level
+        }
+      
+        window.addEventListener('resize', preventZoom);
+        window.addEventListener('load', preventZoom);
+      </script>
 
   </body>
 </html>
