--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Dashboard</title>
-
+    <style>
+      *{
+        overflow: hidden;
+      }
+    </style>
   <!--Bootstrap-->
 
     <link rel="stylesheet" href="css/ll.css">
@@ -199,16 +203,20 @@
 
 
 
-  <p class="copyright">
-    &copy; 2022 - <span>Hogwarts University</span> All Rights Reserved.
-  </p>
 </main>
 
   <script src="js/dashboard.js"></script>
   <script src="js/student_dashboard/script.js"></script>
 
 
-
+  <script>
+    function preventZoom() {
+        document.body.style.zoom = '125%'; // Set the desired zoom level
+    }
+  
+    window.addEventListener('resize', preventZoom);
+    window.addEventListener('load', preventZoom);
+  </script>
 
 
   <script>
