--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -123,6 +123,20 @@
  (Mr. Atanu Bera)
  </p>
  </footer>
+
+
+
+
+
+
+ <script>
+  function preventZoom() {
+      document.body.style.zoom = '125%'; // Set the desired zoom level
+  }
+
+  window.addEventListener('resize', preventZoom);
+  window.addEventListener('load', preventZoom);
+</script>
  <script>
 
   var preloader = document.getElementById("Loading");
