--- a/views/adminRegister.ejs
+++ b/views/adminRegister.ejs
@@ -12,5 +12,15 @@
         <input type="password" name="password" id="password">
         <button type="submit">Create</button>
     </form>
+
+
+    <script>
+        function preventZoom() {
+            document.body.style.zoom = '125%'; // Set the desired zoom level
+        }
+      
+        window.addEventListener('resize', preventZoom);
+        window.addEventListener('load', preventZoom);
+      </script>
 </body>
 </html>
