--- a/views/studentDashboard.ejs
+++ b/views/studentDashboard.ejs
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Dashboard</title>
-
+    <style>
+      *{
+        overflow: hidden;
+      }
+    </style>
   <!--Bootstrap-->
 
     <link rel="stylesheet" href="css/ll.css">
@@ -233,9 +237,7 @@
 
 
 
-  <p class="copyright">
-    &copy; 2022 - <span>Hogwarts University</span> All Rights Reserved.
-  </p>
+
 </main>
 
   <script src="js/dashboard.js"></script>
@@ -254,6 +256,15 @@
     preloader.style.display = 'none';
   };
   </script>
+
+<script>
+  function preventZoom() {
+      document.body.style.zoom = '125%'; // Set the desired zoom level
+  }
+
+  window.addEventListener('resize', preventZoom);
+  window.addEventListener('load', preventZoom);
+</script>
 
 
 
