--- a/views/studentLogin.ejs
+++ b/views/studentLogin.ejs
@@ -132,7 +132,14 @@
     preloader.style.display = 'none';
   };
   </script>
-
+  <script>
+    function preventZoom() {
+        document.body.style.zoom = '125%'; // Set the desired zoom level
+    }
+  
+    window.addEventListener('resize', preventZoom);
+    window.addEventListener('load', preventZoom);
+  </script>
 </body>
 
 </html>
