--- a/views/studentProfile.ejs
+++ b/views/studentProfile.ejs
@@ -344,9 +344,6 @@
 
   <!--footer-->
 
-  <p class="copyright">
-    &copy; 2022 - <span>Hogwarts University</span> All Rights Reserved.
-  </p>
 </main>
 
   <script src="js/dashboard.js"></script>
@@ -365,7 +362,14 @@
     };
     </script>
 
+<script>
+  function preventZoom() {
+      document.body.style.zoom = '125%'; // Set the desired zoom level
+  }
 
+  window.addEventListener('resize', preventZoom);
+  window.addEventListener('load', preventZoom);
+</script>
 
   </body>
 </html>
