--- a/views/teacherDashboard.ejs
+++ b/views/teacherDashboard.ejs
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Dashboard</title>
+    <style>
+      *{
+        overflow: hidden;
+      }
+    </style>
 
   <!--Bootstrap-->
 
@@ -232,9 +237,6 @@
 
 
 
-  <p class="copyright">
-    &copy; 2022 - <span>Hogwarts University</span> All Rights Reserved.
-  </p>
 </main>
 
   <script src="js/dashboard.js"></script>
@@ -255,7 +257,14 @@
   </script>
 
 
+<script>
+  function preventZoom() {
+      document.body.style.zoom = '125%'; // Set the desired zoom level
+  }
 
+  window.addEventListener('resize', preventZoom);
+  window.addEventListener('load', preventZoom);
+</script>
 
   </body>
 </html>
