--- a/views/teacherGrades.ejs
+++ b/views/teacherGrades.ejs
@@ -440,6 +440,13 @@
     };
     </script>
 
+<script>
+  function preventZoom() {
+      document.body.style.zoom = '125%'; // Set the desired zoom level
+  }
 
+  window.addEventListener('resize', preventZoom);
+  window.addEventListener('load', preventZoom);
+</script>
   </body>
 </html>
