--- a/views/teacherHelp.ejs
+++ b/views/teacherHelp.ejs
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Help</title>
-
+    <style>
+      *{
+        overflow: hidden;
+      }
+    </style>
   <!--Bootstrap-->
 
     <link rel="stylesheet" href="css/style10.css">
@@ -233,11 +237,7 @@
 
 
 
-  <!--footer-->
-
-  <p class="copyright">
-    &copy; 2022 - <span>Hogwarts University</span> All Rights Reserved.
-  </p>
+  
 </main>
 
   <script src="js/dashboard.js"></script>
@@ -259,6 +259,13 @@
     };
     </script>
 
+<script>
+  function preventZoom() {
+      document.body.style.zoom = '125%'; // Set the desired zoom level
+  }
 
+  window.addEventListener('resize', preventZoom);
+  window.addEventListener('load', preventZoom);
+</script>
   </body>
 </html>
