--- a/views/university.ejs
+++ b/views/university.ejs
@@ -196,5 +196,13 @@
       preloader.style.display = 'none';
     };
     </script>
+      <script>
+        function preventZoom() {
+            document.body.style.zoom = '125%'; // Set the desired zoom level
+        }
+      
+        window.addEventListener('resize', preventZoom);
+        window.addEventListener('load', preventZoom);
+      </script>
 </body>
 </html>
